--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exp",
   "version": "0.1.0",
+  "appId": "com.app.netChat",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,9 +14,13 @@
   },
   "main": "background.js",
   "dependencies": {
-    "bulma": "^0.9.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "electron-store": "^8.0.0",
+    "peerjs": "^1.3.2",
+    "simple-peer": "^9.11.0",
+    "vue": "^2.6.11",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
