--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
   },
   "main": "background.js",
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "electron-store": "^8.0.0",
-    "peerjs": "^1.3.2",
     "simple-peer": "^9.11.0",
-    "vue": "^2.6.11",
-    "vuex": "^3.6.2"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
